MAPREDUCE-2383. Improve documentation of DistributedCache methods. Contributed by Harsh J Chouraria.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1102187 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -373,6 +373,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2337. Remove dependence of public MapReduce API on classes in
     server package. (tomwhite)
 
+    MAPREDUCE-2383. Improve documentation of DistributedCache methods (Harsh J
+    Chouraria via todd)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
