MAPREDUCE-1626. Publish Javadoc for all contrib packages with user-facing APIs. Contributed by Jolly Chen.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1102363 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -376,6 +376,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2383. Improve documentation of DistributedCache methods (Harsh J
     Chouraria via todd)
 
+    MAPREDUCE-2222. Ivy resolve force mode should be turned off by default.
+    (Luke Lu via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
