HDFS-1903. Fix path display for rm/rmr in TestHDFSCLI and TestDFSShell.  Contributed by Daryn Sharp
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102459 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -538,6 +538,9 @@ Trunk (unreleased changes)
     HDFS-1912. Update tests for FsShell standardized error messages.
     (Daryn Sharp via szetszwo)
 
+    HDFS-1903. Fix path display for rm/rmr in TestHDFSCLI and TestDFSShell.
+    (Daryn Sharp via szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
