Add the change log for HDFS-1627
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102467 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -541,6 +541,8 @@ Trunk (unreleased changes)
     HDFS-1903. Fix path display for rm/rmr in TestHDFSCLI and TestDFSShell.
     (Daryn Sharp via szetszwo)
 
+    HDFS-1627. Fix NullPointerException in Secondary NameNode. (hairong)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
