--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -545,6 +545,10 @@ Trunk (unreleased changes)
 
 Release 0.22.0 - Unreleased
 
+  INCOMPATIBLE CHANGES
+
+    HDFS-1825. Remove thriftfs contrib. (nigel via eli)
+
   NEW FEATURES
 
     HDFS-992. Re-factor block access token implementation to conform to the 
