HDFS-1928. Fix path display for touchz in TestHDFSCLI. Contributed by Daryn Sharp.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102511 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -543,6 +543,9 @@ Trunk (unreleased changes)
 
     HDFS-1627. Fix NullPointerException in Secondary NameNode. (hairong)
 
+    HDFS-1928. Fix path display for touchz in TestHDFSCLI.
+    (Daryn Sharp via todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
