MAPREDUCE-2473. Add "mapred groups" command to query the server-side groups resolved for a user. Contributed by Aaron T. Myers.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1102515 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,9 @@ Trunk (unreleased changes)
 
   NEW FEATURES
 
+    MAPREDUCE-2473. Add "mapred groups" command to query the server-side groups
+    resolved for a user. (Aaron T. Myers via todd)
+
   IMPROVEMENTS
 
     MAPREDUCE-2153. Bring in more job configuration properties in to the trace 
