HDFS-1938. Fix ivy-retrieve-hdfs dependence in build.xml and aop.xml.  Contributed by Eric Yang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102938 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -555,6 +555,9 @@ Trunk (unreleased changes)
     HDFS-1928. Fix path display for touchz in TestHDFSCLI.
     (Daryn Sharp via todd)
 
+    HDFS-1938. Fix ivy-retrieve-hdfs dependence in build.xml and aop.xml.
+    (Eric Yang via szetszwo)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
