HDFS-1929. TestEditLogFileOutputStream fails if running on same host as NN. Contributed by Aaron T. Myers.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102945 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -558,6 +558,9 @@ Trunk (unreleased changes)
     HDFS-1938. Fix ivy-retrieve-hdfs dependence in build.xml and aop.xml.
     (Eric Yang via szetszwo)
 
+    HDFS-1929. TestEditLogFileOutputStream fails if running on same host as NN
+    (Aaron T. Myers via todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
