HDFS-1933. Update TestDFSShell for improved "test" shell command. Contributed by Daryn Sharp.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102947 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -561,6 +561,9 @@ Trunk (unreleased changes)
     HDFS-1929. TestEditLogFileOutputStream fails if running on same host as NN
     (Aaron T. Myers via todd)
 
+    HDFS-1933. Update TestDFSShell for improved "test" shell command. (Daryn
+    Sharp via todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
