HDFS-1946. HDFS part of HADOOP-7291. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1103920 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -416,6 +416,8 @@ Trunk (unreleased changes)
 
     HDFS-1117. Metrics 2.0 HDFS instrumentation. (Luke Lu via suresh)
 
+    HDFS-1946. HDFS part of HADOOP-7291. (eli)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
