MAPREDUCE-2499. MR part of HADOOP-7291. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1103921 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -96,6 +96,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2410. Add entry to streaming FAQ about how streaming reducers
     receive keys. (Harsh J Chouraria via todd)
 
+    MAPREDUCE-2499. MR part of HADOOP-7291. (eli)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
