HDFS-1945. emoved deprecated fields in DataTransferProtocol.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1103957 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -418,6 +418,8 @@ Trunk (unreleased changes)
 
     HDFS-1946. HDFS part of HADOOP-7291. (eli)
 
+    HDFS-1945. emoved deprecated fields in DataTransferProtocol.  (szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
