HDFS-1931. Update TestDFSShell for improved "du" shell command. Contributed by Daryn Sharp.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1103970 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -571,6 +571,9 @@ Trunk (unreleased changes)
 
     HDFS-1933. Update TestDFSShell for improved "test" shell command. (Daryn
     Sharp via todd)
+    
+    HDFS-1931. Update TestDFSShell for improved "du" shell command. (Daryn
+    Sharp via todd)
 
 Release 0.22.0 - Unreleased
 
