HDFS-1947. DFSClient should use mapreduce.task.attempt.id. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1103987 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -811,6 +811,8 @@ Release 0.22.0 - Unreleased
     HDFS-1835. DataNode should not depend on SHA1PRNG secure random generator
     to generate a storage ID. (John Carrino via todd)
 
+    HDFS-1947. DFSClient should use mapreduce.task.attempt.id. (eli)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
