MAPREDUCE-2327. MapTask doesn't need to put username information in SpillRecord. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1103990 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -736,6 +736,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2486. Incorrect snapshot dependency published in .pom files
     (todd)
 
+    MAPREDUCE-2327. MapTask doesn't need to put username information in
+    SpillRecord. (todd via tomwhite)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
