MAPREDUCE-461. Enable ServicePlugins for the JobTracker. Contributed by Fredrik Hedberg.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1103993 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2473. Add "mapred groups" command to query the server-side groups
     resolved for a user. (Aaron T. Myers via todd)
 
+    MAPREDUCE-461. Enable ServicePlugins for the JobTracker.
+    (Fredrik Hedberg via tomwhite)
+
   IMPROVEMENTS
 
     MAPREDUCE-2153. Bring in more job configuration properties in to the trace 
