HDFS-1914. Federation: namenode storage directories must be configurable specific to name service. Contributed by Suresh Srinivas.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1104395 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -278,6 +278,9 @@ Trunk (unreleased changes)
     HDFS-1814. Add "hdfs groups" command to query the server-side groups
     resolved for a user. (Aaron T. Myers via todd)
 
+    HDFS-1914. Federation: namenode storage directories must be configurable
+    specific to name service. (suresh)
+
 
   IMPROVEMENTS
 
