HDFS-1730. Use DaemonFactory from common and delete it from HDFS. Contributed by Tanping.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1104463 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -424,6 +424,9 @@ Trunk (unreleased changes)
     HDFS-1945. Removed the deprecated fields in DataTransferProtocol.
     (szetszwo)
 
+    HDFS-1730. Use DaemonFactory from common and delete it from HDFS.
+    (Tanping via suresh)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
