HDFS-1573. Add useful tracing information to Lease Renewer thread names. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1104526 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -427,6 +427,9 @@ Trunk (unreleased changes)
     HDFS-1730. Use DaemonFactory from common and delete it from HDFS.
     (Tanping via suresh)
 
+    HDFS-1573. Add useful tracing information to Lease Renewer thread names
+    (todd)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
