HDFS-1939.  In ivy.xml, test conf should not extend common conf.  Contributed by Eric Yang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1104568 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -430,6 +430,9 @@ Trunk (unreleased changes)
     HDFS-1573. Add useful tracing information to Lease Renewer thread names
     (todd)
 
+    HDFS-1939.  In ivy.xml, test conf should not extend common conf.
+    (Eric Yang via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
