MAPREDUCE-2497. Missing spaces in error messages. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1104599 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -101,6 +101,8 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2499. MR part of HADOOP-7291. (eli)
 
+    MAPREDUCE-2497. Missing spaces in error messages. (eli)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
