MAPREDUCE-2502. JobSubmitter should use mapreduce.job.maps instead of its deprecated equivalent. Contributed by Eli Collins.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1104687 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -103,6 +103,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2497. Missing spaces in error messages. (eli)
 
+    MAPREDUCE-2502. JobSubmitter should use mapreduce.job.maps instead of
+    its deprecated equivalent. (eli via todd)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
