MAPREDUCE-2505. Explain how to use ACLs in the fair scheduler. Contributed by Matei Zaharia.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1124374 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -395,6 +395,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2103. task-controller shouldn't require o-r permissions.
     (todd via eli)
 
+    MAPREDUCE-2505. Explain how to use ACLs in the fair scheduler.
+    (matei via eli)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
