MAPREDUCE-2515. MapReduce code references some deprecated options. Contributed by Ari Rabkin.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1124509 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -756,6 +756,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2327. MapTask doesn't need to put username information in
     SpillRecord. (todd via tomwhite)
 
+    MAPREDUCE-2515. MapReduce code references some deprecated options
+    (Ari Rabkin via todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
