--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -436,6 +436,9 @@ Trunk (unreleased changes)
     HDFS-1332.  Include more information in exceptions and debug messages
     when BlockPlacementPolicy cannot be satisfied.  (Ted Yu via szetszwo)
 
+    HDFS-1958. Confirmation should be more lenient of user input when
+    formatting the NameNode. (todd)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
