--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1021,6 +1021,8 @@ Release 0.22.0 - Unreleased
     HDFS-1925. SafeModeInfo should use the correct constant instead of a
     hard-coded value for its default. (Joey Echeverria via todd)
 
+    HDFS-1575. Viewing block from web UI is broken. (Aaron T. Myers via todd)
+
 Release 0.21.1 - Unreleased
     HDFS-1466. TestFcHdfsSymlink relies on /tmp/test not existing. (eli)
 
