HDFS-1953. Federation: Change name node mxbean name in cluster web console. Contributed by Tanping Wang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1124576 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -599,6 +599,9 @@ Trunk (unreleased changes)
     HDFS-1927. Fix a bug which causes ip=null in NameNode audit log.
     (John George via szetszwo)
 
+    HDFS-1953. Federation: Change name node mxbean name in cluster web 
+    console. (Tanping Wang via suresh)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
