HDFS-1905. Improve namenode -format command by not making -clusterId parameter mandatory. Contributed by Bharath Mundlapudi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1125028 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -439,6 +439,9 @@ Trunk (unreleased changes)
     HDFS-1958. Confirmation should be more lenient of user input when
     formatting the NameNode. (todd)
 
+    HDFS-1905. Improve namenode -format command by not making -clusterId
+    parameter mandatory. (Bharath Mundlapudi via suresh)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
