HDFS-1922. Fix recurring failure of TestJMXGet. Contributed by Luke Lu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1125053 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -608,6 +608,8 @@ Trunk (unreleased changes)
     HDFS-1953. Federation: Change name node mxbean name in cluster web 
     console. (Tanping Wang via suresh)
 
+    HDFS-1922. Fix recurring failure of TestJMXGet (Luke Lu via todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
