HDFS-1371. One bad node can incorrectly flag many files as corrupt. Contributed by Tanping Wang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1125145 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -610,6 +610,9 @@ Trunk (unreleased changes)
 
     HDFS-1922. Fix recurring failure of TestJMXGet (Luke Lu via todd)
 
+    HDFS-1371. One bad node can incorrectly flag many files as corrupt.
+    (Tanping Wang via jitendra)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
