HDFS-1877.  Add a new test for concurrent read and write.  Contributed by CW Chung
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1125189 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -445,6 +445,9 @@ Trunk (unreleased changes)
     HDFS-1941. Remove -genclusterid option from namenode command.
     (Bharath Mundlapudi via suresh)
 
+    HDFS-1877.  Add a new test for concurrent read and write.  (CW Chung
+    via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
