--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1042,6 +1042,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1575. Viewing block from web UI is broken. (Aaron T. Myers via todd)
 
+    HDFS-1952. FSEditLog.open() appears to succeed even if all EDITS
+    directories fail. (Andrew Wang via todd)
+
 Release 0.21.1 - Unreleased
     HDFS-1466. TestFcHdfsSymlink relies on /tmp/test not existing. (eli)
 
