MAPREDUCE-2459. Cache HAR filesystem metadata. (Mac Yang via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1125428 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -122,6 +122,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2516. Rename webinterface.private.actions to
     mapreduce.jobtracker.webinterface.trusted (Ari Rabkin via todd)
 
+    MAPREDUCE-2459. Cache HAR filesystem metadata. (Mac Yang via mahadev)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
