MAPREDUCE-2470. Fix NPE in RunningJobs::getCounters. Contributed by Robert Joseph Evans
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1125578 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -214,6 +214,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2518. The t flag is missing in distcp help message.  (Wei Yongjun
     via szetszwo)
 
+    MAPREDUCE-2470. Fix NPE in RunningJobs::getCounters. (Robert Joseph Evans
+    via cdouglas)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
