MAPREDUCE-2514. Fix typo in TaskTracker ReinitTrackerAction log message. Contributed by Jonathan Eagles.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1125585 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -217,6 +217,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2470. Fix NPE in RunningJobs::getCounters. (Robert Joseph Evans
     via cdouglas)
 
+    MAPREDUCE-2514. Fix typo in TaskTracker ReinitTrackerAction log message.
+    (Jonathan Eagles via cdouglas)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
