HDFS-1932. Ensure that HDFS configuration deprecations are set up in every spot that HDFS configurations are loaded. Contributed by Jolly Chen.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1125601 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1041,6 +1041,9 @@ Release 0.22.0 - Unreleased
     hard-coded value for its default. (Joey Echeverria via todd)
 
     HDFS-1575. Viewing block from web UI is broken. (Aaron T. Myers via todd)
+    
+    HDFS-1932. Ensure that HDFS configuration deprecations are set up in every
+    spot that HDFS configurations are loaded. (Jolly Chen via todd)
 
     HDFS-1952. FSEditLog.open() appears to succeed even if all EDITS
     directories fail. (Andrew Wang via todd)
