--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1048,6 +1048,9 @@ Release 0.22.0 - Unreleased
     HDFS-1952. FSEditLog.open() appears to succeed even if all EDITS
     directories fail. (Andrew Wang via todd)
 
+    HDFS-1965. IPCs done using block token-based tickets can't reuse
+    connections (todd)
+
 Release 0.21.1 - Unreleased
     HDFS-1466. TestFcHdfsSymlink relies on /tmp/test not existing. (eli)
 
