HDFS-1959. Better error message for missing namenode directory. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1125879 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -448,6 +448,8 @@ Trunk (unreleased changes)
     HDFS-1877.  Add a new test for concurrent read and write.  (CW Chung
     via szetszwo)
 
+    HDFS-1959. Better error message for missing namenode directory. (eli)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
