MAPREDUCE-2492. The new MapReduce API should make available task's progress to the task. (amarrk)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1126591 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    MAPREDUCE-2492. The new MapReduce API should make available task's
+    progress to the task. (amarrk)
+
     MAPREDUCE-2153. Bring in more job configuration properties in to the trace 
     file. (Rajesh Balamohan via amarrk)
 
