HADOOP-7259. Contrib modules should include the build.properties from the enclosing hadoop directory. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1126801 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -127,6 +127,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2459. Cache HAR filesystem metadata. (Mac Yang via mahadev)
 
+    HADOOP-7259. Contrib modules should include the build.properties from
+    the enclosing hadoop directory. (omalley)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
