HDFS-1943. Fail to start datanode while start-dfs.sh is executed by root user. Contributed by Wei Yongjun.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1127706 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -615,6 +615,9 @@ Trunk (unreleased changes)
     HDFS-1371. One bad node can incorrectly flag many files as corrupt.
     (Tanping Wang via jitendra)
 
+    HDFS-1943. Fail to start datanode while start-dfs.sh is executed by 
+    root user. (Wei Yongjun via jghoman)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
